Update AppInstaller Uri

--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -35,7 +35,7 @@ jobs:
         MsixPublisherId: CN=Contoso Software (FOR LAB USE ONLY), O=Contoso Corporation, C=US
         MsixPackageDisplayName: PhotoStore
         MsixBuildMode: SideLoadOnly
-        #MsixGenerateAppInstaller: true
+        MsixGenerateAppInstaller: true
 
   steps:
   - task: UseDotNet@2
@@ -80,16 +80,13 @@ jobs:
     inputs:
       solution: PhotoStore.sln
       platform: x64
-      msbuildArguments: /restore /p:AppInstallerUri=$(DistributionUrl) /p:MainPackageUri=$(DistributionUrl) /p:UapAppxPackageBuildMode=$(MsixBuildMode) /p:GenerateAppInstallerFile=$(MsixGenerateAppInstaller)
+      msbuildArguments: /restore /p:AppInstallerUri=$(DistributionUrl)  /p:UapAppxPackageBuildMode=$(MsixBuildMode) /p:GenerateAppInstallerFile=$(MsixGenerateAppInstaller)
       configuration: $(BuildConfiguration)
       maximumCpuCount: false
 
-  #- script: copy .\Package\PhotoStore.appinstaller Package\AppPackages\PhotoStore_$(GitBuildVersionSimple).0_x64_Test\PhotoStore.appinstaller
-    #displayName: Copy appinstaller file + MSIX 
-    #condition: succeeded()
-
-     # $file.AppInstaller.MainPackage.Uri = "$(DistributionUrl)/HeadTraxPackage_$(GitBuildVersionSimple).0_x64.msix"
-     # $file.save(".\HeadTraxPackage\HeadTrax.appinstaller")
+  - script: copy .\Package\PhotoStore.appinstaller Package\AppPackages\PhotoStore_$(GitBuildVersionSimple).0_x64_Test\PhotoStore.appinstaller
+    displayName: Copy appinstaller file + MSIX 
+    condition: succeeded()
 
   - task: PublishPipelineArtifact@0
     inputs:
