--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -92,7 +92,7 @@ jobs:
      secureFile: "ContosoLab-2.pfx"
     displayName: 'Download PFX from secure storage'
 
-  - script: '"C:\Program Files (x86)\Windows Kits\10\bin\10.0.19041.0\x64\signtool" sign /fd SHA256 /f $(Agent.TempDirectory)/ContosoLab-2.pfx /p $(password) $(Build.artifactStagingDirectory)/Package_$(GitBuildVersionSimple).0_x64.msix'
+  - script: '"C:\Program Files (x86)\Windows Kits\10\bin\10.0.19041.0\x64\signtool" sign /fd SHA256 /f $(Agent.TempDirectory)\ContosoLab-2.pfx /p $(password) Package\AppPackages\Package_$(GitBuildVersionSimple).0_x64_Test\Package_$(GitBuildVersionSimple).0_x64.msix'
     condition: succeeded()
     displayName: 'Sign MSIX Package'
 
